adds href links to footer and header

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <nav class="top-menu">
       <a href="#" class="logo">&Sopf;</a>
       <div class="nav-menu">
-        <a href="#">About</a>
-        <a href="#">Projects</a>
-        <a href="#">Contact</a>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#footer">Contact</a>
       </div>
     </nav>
     <div class="name-banner">
@@ -25,7 +25,7 @@
     </div>
   </div>
   <h1>Full Stack Developer</h1>
-  <section class="section about-content">
+  <section id="about" class="section about-content">
     <div class="first-line">&ldquo;Love Challenges, Be Intrigued By Mistakes, Enjoy Effort And Keep On Learning. - Carol Dweck&rdquo;</div>
       <p>I love to code and have a passion for learning.</p>
       <p>As a Full Stack Developer, I have the necessary knowledge and skills of the MERN
@@ -44,7 +44,7 @@
         </ul>
       </p>
   </section>
-  <h2>My Projects</h2>
+  <h2 id="projects">My Projects</h2>
   <p class="projects-p">Please click on any of the projects below to see a variety of front-end, back-end, command line interface and CRUD websites.</p>
   <div class="wrapper">
       <div class="box">
@@ -97,14 +97,14 @@
       </div>
   </div>
   
-  <footer>
+  <footer id="footer">
     <div class="footer-top">
       <img src="./gray-pic2.png" alt="">
       <div class="social-icons">
-        <a href="#"><i class="fa fa-github fa-lg"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-codepen"></i></a>
-        <a href="#"><i class="fa fa-envelope"></i></a>
+        <a href="https://github.com/shaheenaq"><i class="fa fa-github fa-lg"></i></a>
+        <a href="https://www.linkedin.com/in/shaheenaq/"><i class="fa fa-linkedin"></i></a>
+        <a href="https://codepen.io/dashboard/"><i class="fa fa-codepen"></i></a>
+        <a href="mailto:shaheenaq@gmail.com"><i class="fa fa-envelope"></i></a>
       </div>
     </div>
     <p>&copy;2018 Shaheena Qureshi</p>
