adds project details and links

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           <p>This is a Tax e-filing 1099 web application.
              <em><strong>ReactJS, MongoDB and NodeJS</strong></em> were among the toolset.
           </p>
-          <a href="#"><i class="fa fa-github fa-lg"></i> Code and details</a>
-          <a href="#"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
+          <a href="https://github.com/shaheenaq/blueberry-app"><i class="fa fa-github fa-lg"></i> Code and details</a>
+          <a href="https://agile-cove-81436.herokuapp.com/"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
         </div>
       </div>  
       <div class="box">
@@ -67,8 +67,8 @@
             <p>I built a webscraper that aggregates the latest tech headlines.
                <em><strong>Axios, Cheerio, and MongoDB</strong></em> were among the toolset.
             </p>
-            <a href="#"><i class="fa fa-github fa-lg"></i> Code and details</a>
-            <a href="#"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
+            <a href="https://github.com/shaheenaq/TechNews"><i class="fa fa-github fa-lg"></i> Code and details</a>
+            <a href="https://blooming-brushlands-51989.herokuapp.com/"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
           </div>
       </div>
       <div class="box">
@@ -79,8 +79,8 @@
             <p>Create your personal wine list from a large Dataset.
                <em><strong>Sequelize, MySQL and Handlebars.js</strong></em> were among the toolset.
             </p>
-            <a href="#"><i class="fa fa-github fa-lg"></i> Code and details</a>
-            <a href="#"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
+            <a href="https://github.com/stevensammon/the-grape-vine"><i class="fa fa-github fa-lg"></i> Code and details</a>
+            <a href="https://murmuring-basin-17419.herokuapp.com/"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
           </div>
       </div>
       <div class="box">
@@ -91,8 +91,8 @@
             <p>A Bitcoin vendor locator using Geolocation.
                <em><strong>jQuery, AJAX, and Google Maps API</strong></em> were among the toolset.
             </p>
-            <a href="#"><i class="fa fa-github fa-lg"></i> Code and details</a>
-            <a href="#"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
+            <a href="https://github.com/pperreiah/project-bitcoin"><i class="fa fa-github fa-lg"></i> Code and details</a>
+            <a href="https://pperreiah.github.io/project-bitcoin"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
           </div>
       </div>
   </div>
