adds more project details and links

--- a/index.html
+++ b/index.html
@@ -95,6 +95,42 @@
             <a href="https://pperreiah.github.io/project-bitcoin"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
           </div>
       </div>
+      <div class="box">
+        <div class="shape">
+            <div class="project-title">FriendFinder</div>
+        </div>
+        <div class="overlay">
+          <p>Matches a friend, based on form answers.
+             <em><strong>JQuery,CSS3,HTML5</strong></em> were among the toolset.
+          </p>
+          <a href="https://github.com/shaheenaq/FriendFinder"><i class="fa fa-github fa-lg"></i> Code and details</a>
+          <a href="https://young-thicket-72961.herokuapp.com"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
+        </div>
+      </div>
+      <div class="box">
+        <div class="shape">
+            <div class="project-title">Heroes</div>
+        </div>
+        <div class="overlay">
+          <p>Interactive application allows users to create gifs.
+             <em><strong>GiphyAPI, JQuery, AJAX</strong></em> were among the toolset.
+          </p>
+          <a href="https://github.com/shaheenaq/HeroesAndVillains"><i class="fa fa-github fa-lg"></i> Code and details</a>
+          <a href="https://shaheenaq.github.io/HeroesAndVillains/"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
+        </div>
+      </div>
+      <div class="box">
+        <div class="shape">
+            <div class="project-title">Crystals</div>
+        </div>
+        <div class="overlay">
+          <p>An interactive mathematical game application.
+             <em><strong>JavaScript, HTML5, CSS3</strong></em> were among the toolset.
+          </p>
+          <a href="https://github.com/shaheenaq/CrystalsCollector"><i class="fa fa-github fa-lg"></i> Code and details</a>
+          <a href="https://shaheenaq.github.io/CrystalsCollector/"><i class="fa fa-cloud-upload fa-lg"></i> Website</a>
+        </div>
+      </div>
   </div>
   
   <footer id="footer">
